
//
//  GlobalConstants.swift
//  WeatherPredictor
//
//  Created by Mac on 05/07/20.
//  Copyright © 2020 Ishwar. All rights reserved.
//


import Foundation

struct GlobalConstants {
    static let SHOW_CITIES = "show_cities"

    static let SHOW_CURRENT_CITY_MAP = "show_current_city_map"
    
    static let FORECAST_WEATHER = "forecast_weather"
    
    static let WEATHER_API_KEY_NAME = "weather_api_key"

    static let WEATHER_API_KEY = "89a0fab6c513ec54830fa1167ab2097e"

    static let GENERAL_ERROR = "General Error"
    
    static let CURRENT_API = "​https://openweathermap.org/current"
    
    static let FORECAST_API = "​https://openweathermap.org/forecast5"
}
